# hello-rust-parcel

./: .gitignore  .travis.yml  README.md  package-lock.json  package.json  test.html
crate/: Cargo.toml
crate/src/: hello.rs  hello_array.rs  hello_async.rs  hello_fetch.rs  hello_hash.rs  hello_whatever.rs  lib.rs
js/: index.js
