[package]
authors = ["Sarah Allen", "The RustWasm Developers"]
categories = ["wasm"]
description = "My super awesome Rust, WebAssembly, and Parcel project!"
license = "Apache-2.0/MIT"
name = "hello-rust-parcel"
readme = "./README.md"
repository = "https://github.com/ultrasaurus/hello-rust-parcel"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "0.1.5"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.5", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however. Also as of wee_alloc v0.4.2, does not yet work on stable
# (tested with rust v1.31.1).
wee_alloc = { version = "0.4.2", optional = true }
wasm-bindgen-futures = "0.4.8"
js-sys = "0.3.35"
serde = { version = "1.0", features = ["derive"] }

[dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]

[features]
default = ["console_error_panic_hook"]

